# Ardan_2023_05_18_Live

./: Cargo.toml  README.md
auth/: Cargo.toml
auth/src/: lib.rs
login/: Cargo.toml  users.json
login/src/: main.rs
login_manager/: Cargo.toml  users.json
login_manager/src/: main.rs
variables/src/: main.rs
week2_threads/atomics/src/: main.rs
week2_threads/channel_ownership/: Cargo.toml
week2_threads/channel_ownership/src/: main.rs
week2_threads/cpu_affinity/: Cargo.toml
week2_threads/deadlocks/src/: main.rs
week2_threads/divide_work/: Cargo.toml
week2_threads/divide_work/src/: main.rs
week2_threads/dont_do_this/: Cargo.toml
week2_threads/dont_do_this/src/: main.rs
week2_threads/hello_thread/: Cargo.toml
week2_threads/hello_thread/src/: main.rs
week2_threads/mpsc/src/: main.rs
week2_threads/mutexes/src/: main.rs
week2_threads/parking/src/: main.rs
week2_threads/poisoning/: Cargo.toml
week2_threads/poisoning/src/: main.rs
week2_threads/rayon_easy_mode/: Cargo.toml
week2_threads/rayon_easy_mode/src/: main.rs
week2_threads/rayon_other/: Cargo.toml
week2_threads/rayon_other/src/: main.rs
week2_threads/rayon_scoped/: Cargo.toml
week2_threads/rayon_scoped/src/: main.rs
week2_threads/read_write_lock/: Cargo.toml
week2_threads/read_write_lock/src/: main.rs
week2_threads/scoped_threads/src/: main.rs
week2_threads/send_fn_thead/: Cargo.toml
week2_threads/send_fn_thead/src/: main.rs
week2_threads/thread_builder/src/: main.rs
week2_threads/thread_prio/: Cargo.toml
week2_threads/thread_prio/src/: main.rs
week2_threads/work_queue/src/: main.rs
week3_async/blocking/: Cargo.toml
week3_async/blocking/src/: main.rs
week3_async/database/: Cargo.toml  hello_db.db-shm  hello_db.db-wal
week3_async/database/src/: main.rs
week3_async/error_handling/: Cargo.toml
week3_async/error_handling/src/: main.rs
week3_async/file_io/: Cargo.toml
week3_async/file_io/src/: main.rs
week3_async/hello_async/: Cargo.toml
week3_async/hello_async/src/: main.rs
week3_async/hello_tokio/: Cargo.toml
week3_async/hello_tokio/src/: main.rs
week3_async/network_io/: Cargo.toml
week3_async/network_io/src/: main.rs
week3_async/select_channels/src/: main.rs
week3_async/selecting/: Cargo.toml
week3_async/selecting/src/: main.rs
week3_async/tcp_io/: Cargo.toml
week3_async/tcp_io/src/: main.rs
week3_async/tcp_io_client/: Cargo.toml
week3_async/tcp_io_client/src/: main.rs
week3_async/thumbnail_server/: .env  Cargo.toml  images.db-shm  images.db-wal
week3_async/thumbnail_server/migrations/: 20230601183513_init.sql
week3_async/thumbnail_server/src/: index.html  main.rs
week3_async/tokio_channels/: Cargo.toml
week3_async/tokio_channels/src/: main.rs
week3_async/tokio_errors/: Cargo.toml
week3_async/tokio_errors/src/: main.rs
week3_async/tokio_shared_state/: Cargo.toml
week3_async/tokio_shared_state/src/: main.rs
week3_async/tokio_tracing/src/: main.rs
week3_async/web_server/: Cargo.toml
week3_async/web_server/src/: hello.html  main.rs
week4_memory/arena_bump/src/: main.rs
week4_memory/atomic_refcount/: Cargo.toml
week4_memory/atomic_refcount/src/: main.rs
week4_memory/c_rust/: Cargo.toml  build.rs
week4_memory/c_rust/src/: crust.c  main.rs
week4_memory/external_arc/: Cargo.toml
week4_memory/external_arc/src/: main.rs
week4_memory/generic_basic/: Cargo.toml
week4_memory/generic_basic/src/: main.rs
week4_memory/hashmap_bucket/src/: main.rs
week4_memory/internal_arc/: Cargo.toml
week4_memory/internal_arc/src/: main.rs
week4_memory/libc_malloc/: Cargo.toml
week4_memory/libc_malloc/src/: main.rs
week4_memory/lifetimes/src/: main.rs
week4_memory/linked_list/src/: main.rs
week4_memory/make_trait/src/: main.rs
week4_memory/packing_mangling/: Cargo.toml
week4_memory/packing_mangling/src/: main.rs
week4_memory/point_trait/: Cargo.toml
week4_memory/point_trait/src/: main.rs
week4_memory/raii/src/: main.rs
week4_memory/refcell/src/: main.rs
week4_memory/refcount/src/: main.rs
week4_memory/rust_c/: Cargo.toml
week4_memory/rust_c/src/: lib.rs
week4_memory/save_bytes/src/: main.rs
week4_memory/save_dynamic_bytes/src/: main.rs
week4_memory/slab_arena/: Cargo.toml
week4_memory/slab_arena/src/: main.rs
week4_memory/smart_pointer/src/: main.rs
week5_server/collector_daemon/: Cargo.toml  uuid
week5_server/collector_daemon/src/: data_collector.rs  main.rs  sender.rs
week5_server/collector_server/: .env  Cargo.toml  collection.db  collection.db-shm  collection.db-wal
week5_server/collector_server/migrations/: 20230615170724_initial.sql
week5_server/collector_server/src/: api.rs  collector.html  collector.rs  main.rs
week5_server/shared_data/: Cargo.toml
week5_server/shared_data/src/: lib.rs
