[package]
name = "ardan_2023_05_18_live"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "login", # Play project to get started
    "variables", # Playing with variables
    "auth", # Authentication Library
    "login_manager", # CLI app for managing logins

    # Week 2 - System Threads
    "week2_threads/hello_thread", # Your First Thread
    "week2_threads/divide_work", # Dividing workloads
    "week2_threads/thread_builder", # Thread Builder Patern
]