[package]
name = "ardan_2023_05_18_live"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "login", # Play project to get started
    "variables", # Playing with variables
    "auth", # Authentication Library
    "login_manager", # CLI app for managing logins

    # Week 2 - System Threads
    "week2_threads/hello_thread", # Your First Thread
    "week2_threads/divide_work", # Dividing workloads
    "week2_threads/thread_builder", # Thread Builder Patern
    "week2_threads/scoped_threads", # Scoped threads
    "week2_threads/dont_do_this", # Horrible example of unsafe data racing
    "week2_threads/atomics", # Atomic Numbers
    "week2_threads/mutexes", # Sync with mutexes
    "week2_threads/read_write_lock", # Sync with rwlock
    "week2_threads/deadlocks", # Deadlocking
    "week2_threads/poisoning", # Poisoning
    "week2_threads/mpsc", # Channels
    "week2_threads/channel_ownership", # Channel ownership and moving/borrowing
    "week2_threads/send_fn_thead", 
]