[package]
name = "ardan_2023_05_18_live"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "login", # Play project to get started
    "variables", # Playing with variables
    "auth", # Authentication Library
    "login_manager", # CLI app for managing logins

    # Week 2 - System Threads
    "week2_threads/hello_thread", # Your First Thread
    "week2_threads/divide_work", # Dividing workloads
    "week2_threads/thread_builder", # Thread Builder Patern
    "week2_threads/scoped_threads", # Scoped threads
    "week2_threads/dont_do_this", # Horrible example of unsafe data racing
    "week2_threads/atomics", # Atomic Numbers
    "week2_threads/mutexes", # Sync with mutexes
    "week2_threads/read_write_lock", # Sync with rwlock
    "week2_threads/deadlocks", # Deadlocking
    "week2_threads/poisoning", # Poisoning
    "week2_threads/mpsc", # Channels
    "week2_threads/channel_ownership", # Channel ownership and moving/borrowing
    "week2_threads/send_fn_thead", # Sending functions via channels
    "week2_threads/work_queue", # Simple work queue
    "week2_threads/cpu_affinity", # CPU/Core Affinity
    "week2_threads/thread_prio", # Setting Thread Priority
    "week2_threads/rayon_easy_mode", # Rayon for easy parallel tasks
    "week2_threads/rayon_scoped", # Rayon for thread pools and scoping
    "week2_threads/rayon_other", # Other cool things
    "week2_threads/parking", # Parking threads

    # Week 3 - Async
    "week3_async/hello_async", # The Async Hello World
    "week3_async/hello_tokio", # Intro to Tokio
    "week3_async/blocking", # Blocking in Async
    "week3_async/error_handling", # Exploring Errors
    "week3_async/tokio_errors", # Errors in async
    "week3_async/file_io", # File I/O
    "week3_async/network_io", # Network I/O
    "week3_async/tcp_io", # TCP I/O
    "week3_async/tcp_io_client", # TCP I/O
    "week3_async/tokio_channels", # Channels in Tokio
    "week3_async/tokio_shared_state", # Shared State
    "week3_async/selecting", # Selecting Futures
    "week3_async/select_channels", # Selecting channel futures
    "week3_async/tokio_tracing", # Tokio Tracing
    "week3_async/database", # Databases
    "week3_async/web_server", # HTTP server
    "week3_async/thumbnail_server",

    # Week 4 - Memory
    "week4_memory/libc_malloc",
    "week4_memory/raii",
]
