[package]
name = "collector_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_data = { path = "../shared_data" }
sysinfo = { version = "0.29.2", features = ["apple-app-store"] }
thiserror = "1.0.40"
