[package]
name = "collector_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
dotenv = "0.15.0"
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
shared_data = { path = "../shared_data" }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.28.2", features = ["full"] }
uuid = "1.3.4"
